--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 11
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
@@ -24,10 +24,8 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      - name: Build with Gradle
-        run: |
-          cd slides
-          ./gradlew asciidoctorRevealJs --no-daemon
+      - name: Build slides
+        run: ./gradlew slides:asciidoctorRevealJs --no-daemon
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
