--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -15,11 +15,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
+
+      - name: Install Graphviz
+        run: sudo apt-get update && sudo apt-get install -y graphviz
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
